mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_result_unwrap_err.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: 2 errors found

error: match cannot be used as an expression; it can only be used as a statement
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_result_unwrap_err.mux:6:10
   |
 6 | auto x = match res {
   |          ^^^^^

error: Expected newline before statement
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/semantic_result_unwrap_err.mux:6:20
   |
 6 | auto x = match res {
   |                    ^
